--- a/app/src/main/res/layout/home_row.xml
+++ b/app/src/main/res/layout/home_row.xml
@@ -7,7 +7,7 @@
     android:paddingBottom="5dp">
 
     <ImageView
-        android:id="@+id/lvCategoryImage"
+        android:id="@+id/homeImage"
         android:layout_width="175dp"
         android:layout_height="111dp"
         android:background="@color/black"
@@ -16,16 +16,16 @@
         android:layout_marginLeft="20dp"/>
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/lvCategoryProfile"
+        android:id="@+id/homeProfile"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:src="@drawable/messageprofile1"
         android:layout_marginLeft="5dp"
-        app:layout_constraintTop_toTopOf="@id/lvCategoryImage"
-        app:layout_constraintLeft_toRightOf="@id/lvCategoryImage"/>
+        app:layout_constraintTop_toTopOf="@id/homeImage"
+        app:layout_constraintLeft_toRightOf="@id/homeImage"/>
 
     <TextView
-        android:id="@+id/product_id"
+        android:id="@+id/home_idproduct"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
@@ -34,23 +34,23 @@
         app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
-        android:id="@+id/lvCategoryName"
+        android:id="@+id/homeName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/lvCategoryProfile"
-        app:layout_constraintLeft_toRightOf="@id/lvCategoryProfile"
-        app:layout_constraintBottom_toBottomOf="@id/lvCategoryProfile"
+        app:layout_constraintTop_toTopOf="@id/homeProfile"
+        app:layout_constraintLeft_toRightOf="@id/homeProfile"
+        app:layout_constraintBottom_toBottomOf="@id/homeProfile"
         android:layout_marginLeft="5dp"
         android:text="Izdeveloper"
         android:textSize="8sp"
         android:textColor="@color/black"
         android:fontFamily="@font/nunito_bold"/>
     <TextView
-        android:id="@+id/lvCategoryPrice"
+        android:id="@+id/homePrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/lvCategoryProfile"
-        app:layout_constraintBottom_toBottomOf="@id/lvCategoryProfile"
+        app:layout_constraintTop_toTopOf="@id/homeProfile"
+        app:layout_constraintBottom_toBottomOf="@id/homeProfile"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="20dp"
         android:text="IDR200K"
@@ -60,20 +60,20 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/lvCategoryProfile"
-        app:layout_constraintBottom_toBottomOf="@id/lvCategoryProfile"
-        app:layout_constraintRight_toLeftOf="@id/lvCategoryPrice"
+        app:layout_constraintTop_toTopOf="@id/homeProfile"
+        app:layout_constraintBottom_toBottomOf="@id/homeProfile"
+        app:layout_constraintRight_toLeftOf="@id/homePrice"
         android:text="From"
         android:textSize="6sp"
         android:layout_marginRight="2dp"
         android:fontFamily="@font/nunito"/>
     <TextView
-        android:id="@+id/lvCategoryDescription"
+        android:id="@+id/homeDescription"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/lvCategoryProfile"
-        app:layout_constraintStart_toEndOf="@id/lvCategoryImage"
-        app:layout_constraintEnd_toEndOf="@id/lvCategoryPrice"
+        app:layout_constraintTop_toBottomOf="@id/homeProfile"
+        app:layout_constraintStart_toEndOf="@id/homeImage"
+        app:layout_constraintEnd_toEndOf="@id/homePrice"
         android:layout_marginLeft="5dp"
         android:text="Implement change, debug, fix, improve your swift or obj C ios app"
         android:textSize="10sp"
